--- a/templates/judge.html
+++ b/templates/judge.html
@@ -149,6 +149,7 @@
         </nav>
         <a href="../../../logout">ホームへ戻る</a>
         <h1>{{ incident | safe }}</h1>
+        <p>{{ des | safe }}</p>
         <h2>記録内容</h2>
         <pre>
             {{ res | safe }}
