--- a/templates/home.html
+++ b/templates/home.html
@@ -52,7 +52,7 @@
             </tr>
             <tr>
                 <td>インシデント番号</td>
-                <td><input type="number" name="num" id="num"></td>
+                <td><input type="number" name="num" id="num" min="0" max="9"></td>
             </tr>
             <tr>
                 <td colspan="2" align="right">
