--- a/templates/discussion.html
+++ b/templates/discussion.html
@@ -129,7 +129,7 @@
                     </tr>
                     <tr>
                         <td>インシデント番号</td>
-                        <td><input type="number" name="num" id="num"></td>
+                        <td><input type="number" name="num" id="num" min="0" max="9"></td>
                     </tr>
                     <tr>
                         <td colspan="2" style="text-align:right;">
