--- a/templates/home_ver2.html
+++ b/templates/home_ver2.html
@@ -31,7 +31,7 @@
     </head>
     <body>
         <h1>机上演習サービス</h1>
-        <p>役割を入力してボタンを押してください</p>
+        <p>名前を入力してボタンを押してください</p>
         <div id="alert"></div>
         <table>
             <tr>
